# socks5-proxy

./: .gitignore  CMakeLists.txt  README.md  core.c  fmt.h  main.c  socks5.c  socks5.h
include/: config.h
platform/: unix_socks5.c  win32_socks5.c
src/: config.c
src/platform/: unix_socks5.c  win32_socks5.c
